// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments GET / 1`] = `
{
  "data": {
    "data": [
      {
        "author": {
          "firstName": "Test",
          "id": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
          "lastName": "Tester",
          "lastOnlineAt": "2024-08-10T10:10:10Z",
          "nick": "test_tester",
          "online": true,
        },
        "createdAt": "2024-02-16T15:36:38Z",
        "id": "120c79b8-3927-48b7-a308-1ffd3db6036f",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "comment for permissions test",
        "permissions": {
          "remove": true,
          "update": true,
        },
      },
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:36:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f0",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "3nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:37:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f1",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "4nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:38:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f2",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "5nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:39:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f3",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "6nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
    ],
    "next": "d0023f4d-8d7f-4907-9438-d2ed2a9661f3/2024-02-16T15:39:55Z",
    "totalCount": 8,
  },
  "ok": true,
}
`;

exports[`comments GET / 2`] = `
{
  "data": {
    "data": [
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:40:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f4",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "7nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:41:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f5",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "8nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
      {
        "author": {
          "firstName": "Ilya",
          "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
          "lastName": "Blinkov",
          "lastOnlineAt": "2024-08-10T10:01:02Z",
          "nick": "drugtester",
          "online": false,
        },
        "createdAt": "2024-02-16T15:42:55Z",
        "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f6",
        "likes": {
          "count": 0,
          "liked": false,
          "randomFiveLikers": [],
        },
        "message": "9nd comment message",
        "permissions": {
          "remove": false,
          "update": false,
        },
      },
    ],
    "totalCount": 8,
  },
  "ok": true,
}
`;

exports[`comments permissions GET /:id, has no permissions 1`] = `
{
  "data": {
    "author": {
      "firstName": "Ilya",
      "id": "1ae02f69-ea1a-4308-b825-0e5896e652e4",
      "lastName": "Blinkov",
      "lastOnlineAt": "2024-08-10T10:01:02Z",
      "nick": "drugtester",
      "online": false,
    },
    "createdAt": "2024-02-16T15:36:55Z",
    "id": "d0023f4d-8d7f-4907-9438-d2ed2a9661f0",
    "likes": {
      "count": 0,
      "liked": false,
      "randomFiveLikers": [],
    },
    "message": "3nd comment message",
    "permissions": {
      "remove": false,
      "update": false,
    },
  },
  "ok": true,
}
`;

exports[`comments permissions GET /:id, has permissions 1`] = `
{
  "data": {
    "author": {
      "firstName": "Test",
      "id": "ed1a3fd0-4d0b-4961-b4cd-cf212357740d",
      "lastName": "Tester",
      "lastOnlineAt": "2024-08-10T10:10:10Z",
      "nick": "test_tester",
      "online": true,
    },
    "createdAt": "2024-02-16T15:36:38Z",
    "id": "120c79b8-3927-48b7-a308-1ffd3db6036f",
    "likes": {
      "count": 0,
      "liked": false,
      "randomFiveLikers": [],
    },
    "message": "comment for permissions test",
    "permissions": {
      "remove": true,
      "update": true,
    },
  },
  "ok": true,
}
`;
